manifests/analog-gauge-reader/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - name: http
    port: 3000
